Fix overlap on new bucket button

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -12,7 +12,7 @@
   
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  margin: calc(var(--block-space) * -1) auto auto;
+  margin: auto;
 }
 
 .events__day-header {
